# actix-web-to-do-app

./: .env.production  Cargo.toml  Dockerfile  New_Collection.postman_collection.json  README.md  docker-compose.yml  state.json
css/: main.css
deploy/: docker-compose.yml  docker-compose.yml.example  push_to_dockerhub.sh
deploy/nginx/: nginx.conf
javascript/: main.js
migrations/2023-02-11-152322_create_to_do_items/: up.sql
migrations/2023-02-13-123420_create_users/: up.sql
migrations/2023-02-14-133354_user_title_constraint/: down.sql  up.sql
src/: database.rs  main.rs  processes.rs  state.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/json_serialization/: to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
src/to_do/structs/traits/: create.rs  edit.rs  get.rs
src/views/: mod.rs  token.rs
src/views/app/: items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
