[package]
name = "managing_views"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["std", "derive"] }
serde_json = { version = "1.0.93", default-features = false, features = ["alloc"]}

