[package]
name = "managing_views"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
bcrypt = "0.14.0"
diesel = { version = "2.0.3", features=["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.26"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["std", "derive"] }
serde_json = { version = "1.0.93", default-features = false, features = ["alloc"]}
sha2 = "0.10.6"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

